traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Erreur de compilation :
TraversalZigZag:17: error: not found: value bougeinverse
          bougeinverse()
          ^